# Blockchain

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  b.py  info.py  main.py  settings.py
app/api/: router.py
app/core/: blockchain.py  config.py  lmdb_storage.py  node_sync.py  tunnel_transfer.py
app/utils/: constants.py  helpers.py  secure_wallet.py  wallet_generator.py
docs/: README.md
docs/api/: API_IMPLEMENTATION_SUMMARY.md  README_SDK.md  RPC_API_REFERENCE.md  SDK_API_REFERENCE.md
docs/architecture/: ORGANIZATION_COMPLETE.txt  PHONESIUM_SDK_COMPLETE.md  PROJECT_STRUCTURE.md  SESSION_SUMMARY.md  SYSTEM_READY.md
docs/guides/: ENCRYPTION.md  GOSSIP_AND_ECONOMICS.md  TUNNEL_TRANSFER.md  speedup.md
docs/reports/: BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.txt  FINAL_RESULTS.txt  TPS_RESULTS.txt
docs/security/: CRITICAL_FIXES_AND_SDK_REPORT.md  PERFECT_SECURITY_ACHIEVED.md  SECURITY_AUDIT.md
docs/setup/: QUICKSTART.md  SETUP.md
phonesium/: __init__.py  client.py  example_complete.py  example_create_wallet.py  miner.py
scripts/: run_1000tx_test.bat  start_node.bat
test/: README.md
test/conversion/: convert_all_to_orjson.py
test/integration/: test_1000_transactions.py  test_complete_system.py  test_integration.py  test_multi_node.py  test_quick_integration.py  test_system.py  test_tps_benchmark.py
test/performance/: benchmark_before_after.py  test_performance.py  test_tps_capacity.py
test/tools/: final_verification.py  quick_test.py  setup_node.py
user/: Explorer.py  Miner.py  SendTokens.py
(+21 files in other folders)
