[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phonesium"
version = "1.0.0"
description = "Easy-to-use Python SDK for PHN Blockchain"
authors = [
    {name = "Phonesium Team", email = "support@phonesium.network"},
]
dependencies = [
    "requests>=2.28.0",
    "ecdsa>=0.18.0",
    "cryptography>=41.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]

node = [
    "plyvel",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "filelock>=3.12.0"
]

[tool.hatch.build.targets.wheel]
packages = ["phonesium"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
